--- a/index.html
+++ b/index.html
@@ -28,35 +28,9 @@
   <title>모모하다</title>
 </head>
 <body>
-
+  
   <!-- HEADER -->
   <header>
-    <div class="main-visual">
-      <div class="swiper mainVisual">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide visual1">
-            <a href="javascript:void(0)">MAIN-VISUAL-1</a>
-          </div>
-          <div class="swiper-slide visual2">
-            <a href="javascript:void(0)">MAIN-VISUAL-2</a>
-          </div>
-          <div class="swiper-slide visual3">
-            <a href="javascript:void(0)">MAIN-VISUAL-3</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="swiper-prev">
-      <div class="material-icons">navigate_before</div>
-    </div>
-    <div class="swiper-next">
-      <div class="material-icons">navigate_next</div>
-    </div>
-
-    <!-- Main-visual 끝 -->
-
-
     <div class="main-container">
       <div class="inner">
         <a href="/" class="logo">
@@ -183,18 +157,51 @@
               </div>
             </div>
           </li>
-            
-          </div>
         </ul>
+
+
+        <div class="badges">
+          <a href="javascript:void(0)">
+            <img src="./image/badge_1.jpg" alt="모모하다 온라인 샵 런칭" />
+          </a>
+          <a href="javascript:void(0)">
+            <img src="./image/badge_2.jpg" alt="카드 프로모션" />
+          </a>
+        </div>
+
       </div>
     </div>
-    
+
     <!-- Drop-menu 끝 -->
 
   </header>
 
 
+  <!-- MAIN-VISUAL -->
+  <section class="main-visual">
+    <div class="swiper mainVisual">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide visual1">
+          <a href="javascript:void(0)">MAIN-VISUAL-1</a>
+        </div>
+        <div class="swiper-slide visual2">
+          <a href="javascript:void(0)">MAIN-VISUAL-2</a>
+        </div>
+        <div class="swiper-slide visual3">
+          <a href="javascript:void(0)">MAIN-VISUAL-3</a>
+        </div>
+      </div>
+    </div>
 
+    <div class="swiper-prev">
+      <div class="material-icons">navigate_before</div>
+    </div>
+    <div class="swiper-next">
+      <div class="material-icons">navigate_next</div>
+    </div>
+  </section>
+
+  <!-- Main-visual 끝 -->
 
 
 
