best menu start

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
   <header>
     <div class="main-container">
       <div class="inner">
-        <a href="/" class="logo">
-          <img src="./image/momo_logo.png" alt="momo logo">
-        </a>
         
         <ul class="main-menu">
           <li class="item">
@@ -159,6 +156,24 @@
           </li>
         </ul>
 
+        <a href="/" class="logo">
+          <img src="./image/momo_logo.png" alt="momo logo">
+        </a>
+
+        <div class="search">
+          <input type="text">
+          <div class="material-icons">search</div>
+        </div>
+
+        <div class="sub-menu">
+          <ul class="menu">
+            <li><a href="/signin" class="sub-item__name">Sign In</a></li>
+            <li><a href="javascript:void(0)" class="sub-item__name">My MOMO</a></li>
+            <li><a href="javascript:void(0)" class="sub-item__name">Customer Service & Ideas</a></li>
+            <li><a href="javascript:void(0)" class="sub-item__name">Find a Store</a></li>
+          </ul>
+        </div>
+
 
         <div class="badges">
           <a href="javascript:void(0)">
@@ -179,31 +194,56 @@
 
   <!-- MAIN-VISUAL -->
   <section class="main-visual">
-    <div class="swiper mainVisual">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide visual1">
-          <a href="javascript:void(0)">MAIN-VISUAL-1</a>
-        </div>
-        <div class="swiper-slide visual2">
-          <a href="javascript:void(0)">MAIN-VISUAL-2</a>
-        </div>
-        <div class="swiper-slide visual3">
-          <a href="javascript:void(0)">MAIN-VISUAL-3</a>
+    <div class="inner">
+      <div class="swiper mainVisual">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide visual1">
+            <a href="javascript:void(0)">MAIN-VISUAL-1</a>
+          </div>
+          <div class="swiper-slide visual2">
+            <a href="javascript:void(0)">MAIN-VISUAL-2</a>
+          </div>
+          <div class="swiper-slide visual3">
+            <a href="javascript:void(0)">MAIN-VISUAL-3</a>
+          </div>
         </div>
       </div>
-    </div>
-
-    <div class="swiper-prev">
-      <div class="material-icons">navigate_before</div>
-    </div>
-    <div class="swiper-next">
-      <div class="material-icons">navigate_next</div>
+  
+      <div class="swiper-prev">
+        <div class="material-icons">navigate_before</div>
+      </div>
+      <div class="swiper-next">
+        <div class="material-icons">navigate_next</div>
+      </div>
     </div>
   </section>
 
   <!-- Main-visual 끝 -->
 
+  <!-- Best-Menu -->
+  <section class="best-menu_container">
+    <div class="inner">
+      <div class="best-mn">
+        <div class="content">
+          <p class="title">Best Menu</p>
+          <p class="bar"></p>
+          <p class="sub-title">모모하다 베스트 메뉴 </p>
+        </div>
+        <div class="content-list">
+          <ul>
+            <li class="grid"></li>
+            <li class="grid"></li>
+            <li class="grid"></li>
+            <li class="grid"></li>
+          </ul>
+        </div>
+  
+  
+  
+      </div>
+    </div>
 
+  </section>
 
 
 
